Started consolidating various 'clean build' and 'clean assemble' performance test cases into fewer locations.
Also use more consistent JVM args for performance test build invocations.